tests/baselines/reference/asyncFunctionDeclaration6_es6.errors.txt
tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration6_es6.ts(1,29): error TS1109: Expression expected.


==== tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration6_es6.ts (1 errors) ====
    async function foo(a = await): Promise<void> {
                                ~
!!! error TS1109: Expression expected.
    }